# godot_mpv

./: .gitignore  CMakeLists.txt  README.md  SConstruct
.github/workflows/: builds.yaml
dependencies/: .gitignore
dependencies/glad/include/glad/: egl.h  gles2.h
godot_project/: frame_counter.gd  frame_counter.gd.uid  main.tscn  mpv_video_player_3d.gd  project.godot
native/src/godot_mpv/: mpv_player.cpp  mpv_player.h  register_types.cpp  register_types.h
native/src/godot_mpv/include/: version.h
